# balatrollm

./: pyproject.toml
config/: example.yaml
src/balatrollm/: bot.py  cli.py  client.py  collector.py  config.py  llm.py
src/balatrollm/strategies/aggressive/: TOOLS.json
src/balatrollm/strategies/conservative/: TOOLS.json
