[project]
name = "balatrollm"
version = "1.1.1"
description = "LLM-powered bot that plays Balatro using strategic decision making"
readme = "README.md"
authors = [{ name = "S1M0N38", email = "bertolottosimone@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
  "jinja2>=3.1.6",
  "openai>=2.14.0",
  "pyyaml>=6.0.3",
  "httpx>=0.28.1",
  "balatrobot>=1.4.1",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.13",
]

[project.scripts]
balatrollm = "balatrollm.cli:main"

[project.urls]
Homepage = "https://github.com/coder/balatrollm"
Issues = "https://github.com/coder/balatrollm/issues"
Repository = "https://github.com/coder/balatrollm"
Changelog = "https://github.com/coder/balatrollm/blob/main/CHANGELOG.md"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [".venv", "balatrobot", "balatro"]
lint.extend-select = ["I"]
lint.task-tags = ["FIX", "TODO", "HACK", "WARN", "PERF", "NOTE", "TEST"]

# [tool.uv.sources]
# balatrobot = { git = "https://github.com/coder/balatrobot.git", rev = "main" }
# Or use local balatrobot for local development
# balatrobot = { path = "../balatrobot", editable = true }

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
addopts = "--dist loadscope"
markers = [
  "dev: marks tests that are currently developed",
  "integration: marks integration tests that actually start Balatro (deselect with '-m \"not integration\"')",
]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"


[dependency-groups]
test = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "pytest-xdist[psutil]>=3.5.0",
  "respx>=0.22.0",
]
dev = [
  "commitizen>=4.11.0",
  "mdformat>=0.7.22,<0.8.0",
  "mdformat-footnote>=0.1.2",
  "mdformat-frontmatter>=2.0.8",
  "mdformat-gfm>=1.0.0",
  "mdformat-gfm-alerts>=2.0.0",
  "mdformat-mkdocs>=5.1.1",
  "mdformat-simple-breaks>=0.0.1",
  "mkdocs>=1.6.1",
  "mkdocs-llmstxt>=0.5.0",
  "mkdocs-material>=9.7.1",
  "ruff>=0.14.10",
  "ty>=0.0.9",
]
